<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="DSV2_ClangsonicGenerator" Id="{a1c703d7-9a11-45ed-a38b-e28afed1bd22}">
    <Declaration><![CDATA[TYPE DSV2_ClangsonicGenerator :
STRUCT

	iRWRef 						: ARRAY [1..iUSModbusRWQty] OF INT;
	(***************************************************)
	(*
		0 = --- End Code ---
		1 = Read ONLY
		2 = Read/Write
		3 = Disable
		4 = --- End Code ---
		Above 4 = --- End Code ---
										*)
	(***************************************************)

	wModbusData 				: ARRAY [1..iUSModbusRWQty] OF WORD; (*Data for Read or Write*)
	wModbusRegisterAddr 		: ARRAY [1..iUSModbusRWQty] OF WORD; (*Modbus Register Address*)
	B_UnitID 						: ARRAY [1..iUSModbusRWQty] OF BYTE; (*Unit ID - Modbus ID*)

END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>